--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,3 +6,7 @@
   roles:
     - role: common
       datawire_repository: staging
+    - role: mariadb
+      db_name: lobster
+      db_user: lobster
+      db_password: lobster
