--- a/ansible/roles/common/defaults/main.yml
+++ b/ansible/roles/common/defaults/main.yml
@@ -8,7 +8,7 @@ datawire_repository: stable
 datawire_repository_url: https://packagecloud.io/install/repositories/datawire/{{ datawire_repository }}/script.deb.sh
 
 # ------------------------------------------------------------------------------
-# General Configuration
+# System Configuration
 # ------------------------------------------------------------------------------
 essential_system_packages:
   - curl
