Bootstraps with database, lobsters and datawire successfully also reloads from dev machine

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,7 +6,7 @@
   roles:
     - role: common
       datawire_repository: staging
-    - role: mariadb
-      db_name: lobster
-      db_user: lobster
-      db_password: lobster
+    - role: datawire-directory
+    - role: lobsters
+#    - role: lobster-popularity-service
+#      count: 2
