--- a/ansible/roles/datawire-directory/tasks/main.yml
+++ b/ansible/roles/datawire-directory/tasks/main.yml
@@ -1,1 +1,36 @@
+---
 # file: roles/datawire-directory/tasks/main.yml
+
+- name: create datawire directory data directory
+  file:
+    path: "{{ microwizard_docker_volumes }}/datawire"
+    state: directory
+  tags:
+    - datawire-directory
+    - infrastructure
+
+- name: pull datawire directory image
+  command: docker pull quay.io/datawire/directory:{{ dw_directory_image_version }}
+  tags:
+    - datawire-directory
+    - infrastructure
+
+- name: retag datawire directory image
+  command: docker tag -f quay.io/datawire/directory:{{ dw_directory_image_version }} directory
+
+- name: start datawire directory container
+  docker:
+    command: "/bin/bash -c '/usr/bin/directory -n $(hostname -i) -p 5672 -l DEBUG'"
+    image: microwizard/base
+    name: directory
+    expose:
+      - 5672
+    pull: missing
+    registry: quay.io
+    state: restarted
+    volumes:
+      - "{{ microwizard_docker_volumes }}/datawire:/etc/datawire"
+  register: directory_container
+  tags:
+    - datawire-directory
+    - infrastructure
