--- a/ansible/roles/mariadb/tasks/main.yml
+++ b/ansible/roles/mariadb/tasks/main.yml
@@ -6,11 +6,12 @@
     path: "{{ microwizard_docker_volumes }}/{{ db_name }}"
     state: directory
   tags:
+    - infrastructure
     - mariadb
 
 - name: ensure mariadb is running
   docker:
-    name: "{{ db_name }}-mariadb"
+    name: "{{ db_name }}-db"
     image: mariadb:{{ mariadb_image_version }}
     env:
       MYSQL_ROOT_PASSWORD: "{{ db_root_password }}"
@@ -18,6 +19,7 @@
       MYSQL_USER: "{{ db_user }}"
       MYSQL_PASSWORD: "{{ db_password }}"
     volumes:
-      - "{{ microwizard_docker_volumes }}/{{ db_name }}:/var/lib/mysql"
+      - "{{ microwizard_docker_volumes }}/{{ db_name }}-db:/var/lib/mysql"
   tags:
+    - infrastructure
     - mariadb
