--- a/docker/lobsters-popularity/Dockerfile
+++ b/docker/lobsters-popularity/Dockerfile
@@ -6,8 +6,8 @@ ENV HOME /root
 CMD ["/sbin/my_init"]
 EXPOSE 3000
 
-RUN mkdir /etc/service/lobsters
-RUN cp /img_build/service/lobsters.sh /etc/service/lobsters/run
+RUN mkdir /etc/service/lobsters_popularity
+RUN cp /img_build/service/lobsters_popularity.sh /etc/service/lobsters_popularity/run
 
 RUN mkdir /etc/service/watson
 RUN cp /img_build/service/watson.sh /etc/service/watson/run
