--- a/docker/lobsters/Dockerfile
+++ b/docker/lobsters/Dockerfile
@@ -14,9 +14,11 @@ RUN chmod +x /etc/my_init.d/11_lobsters.sh
 
 RUN mkdir /etc/service/lobsters
 RUN cp /img_build/service/lobsters.sh /etc/service/lobsters/run
+RUN chmod +x /etc/service/lobsters/run
 
 RUN mkdir /etc/service/sherlock
 RUN cp /img_build/service/sherlock.sh /etc/service/sherlock/run
+RUN chmod +x /etc/service/sherlock/run
 
 RUN rm -rf /img_build
 
