Show the query speed in the demo page. Move files around.
Moved some files around (all the image configs are now under /docker/images) which makes mounting the root directory onto the VM simpler since we don't need to do complex directory mappings.

Data volumes now live on an unmapped location since Docker was struggling with the vboxsf system and permissions.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@
 .directory
 .vagrant
 
-docker/base/Dockerfile
-docker/base/Dockerfile.j2
+docker/images/base/Dockerfile
+docker/images/base/Dockerfile.j2
+docker/data
+/data
