--- a/ansible/add_service.yml
+++ b/ansible/add_service.yml
@@ -4,6 +4,7 @@
   sudo: yes
   roles:
     - role: lobsters-popularity-service
+      state: present
       lobster_db_name: lobsters
       lobster_db_user: lobsters
       lobster_db_password: lobsters
