Generified and simplified MicroWizard
Moved ansible/ to provisioning/
Deprecated the need for Docker images per service
New service init and run script that is fully customizable
Improved bootstrapping performance

--- a/provisioning/roles/common/defaults/main.yml
+++ b/provisioning/roles/common/defaults/main.yml
@@ -12,15 +12,18 @@ datawire_repository_url: https://packagecloud.io/install/repositories/datawire/{
 # ------------------------------------------------------------------------------
 essential_system_packages:
   - curl
-  - docker-engine
+  - gcc
   - git
   - python-pip
   - python-devel
-
-additional_system_packages: []
 
 essential_python_packages:
   - docker-py
   - docopt
 
-additional_python_packages: []
+# ------------------------------------------------------------------------------
+# Docker Configuration
+# ------------------------------------------------------------------------------
+
+docker_users:
+  - vagrant
