--- a/provisioning/microwizard_lobsters.yml
+++ b/provisioning/microwizard_lobsters.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: all
   sudo: yes
+  pre_tasks:
+    - include_vars: "../src/lobsters/microwizard/microwizard.yml"
   roles:
     - role: common
       datawire_repository: staging
